Horizontal scrollbar fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,4 +11,5 @@ html {
 body {
   color: #3d3d3f;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow-x: hidden;
 }
